--- a/home/templates/home/golf_course_display.html
+++ b/home/templates/home/golf_course_display.html
@@ -11,9 +11,8 @@
             {% for course in courses %}
             <li>
                 <h2>{{ course.name }}</h2>
-                <p>Location: {{ course.location }}</p>
-                <p>{{ course.description }}</p>
-                <p>Submitted on: {{ course.created_on }}</p>
+                <p class="course">Location: {{ course.location }}</p>
+                <p class="course">Submitted on: {{ course.created_on }}</p>
                 <form method="post" action="{% url 'delete_golfcourse' course.id %}" class="delete-course">
                     {% csrf_token %}
                     <button type="submit" class="deletecourse-button">Delete Course!</button>
