--- a/static/css/style.css
+++ b/static/css/style.css
@@ -510,3 +510,9 @@ form, .golf-courselist-div, .signin-div, .signup-div {
         margin: 20px;
     }
 }
+
+@media screen and (max-width: 250px) {
+    nav div ul li {
+        font-size: 0.6em;
+    }
+}
