Secure buttons on post list

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -14,9 +14,13 @@
                     <p>{{ post.author }} | {{ post.created_on }}</p>
                     <form method="POST" action="{% url 'delete_post' post.id %}" class="delete-form">
                         {% csrf_token %}
+                        {% if request.user == post.author %}
                         <button type="submit" class="deletepost-button">Delete Post! &raquo;</button>
+                        {% endif %}
                         <button class="viewpost-button"><a href="{% url 'post_detail' post.id %}">View Post! &raquo;</a></button>
+                        {% if request.user == post.author %}
                         <button class="editpost-button"><a href="{% url 'edit_post' post.id %}">Edit Post! &raquo;</a></button>
+                        {% endif %}
                     </form>
                 </div> 
             </div>
