--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-    font-family: "Roboto", sans-serif;
     font-size: 25px;
     text-align: center;
     /* Taken from webgradients.com */
@@ -145,6 +144,13 @@ h1 {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+}
+
+.delete-comment {
+    background-image: none;
+    border: none;
+    box-shadow: none;
+    font-size: 0.8em;
 }
 
 #form-heading {
