--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -18,8 +18,8 @@
                 <li>
                     <strong>{{ comment.author }}</strong> on {{ comment.created_on }}<br>
                     {{ comment.body }}
-                    {% if request.user == comment.user or request.user.is_superuser %}
-                    <form method="post" action="{% url 'delete_comment' comment.id %}" class="delete-comment">
+                    {% if request.user == comment.author or request.user.is_superuser %}
+                    <form method="post" action="{% url 'delete_comment' slug=post.slug comment_id=comment.id %}" class="delete-comment">
                         {% csrf_token %}
                         <button type="submit" class="deletecomment-button">Delete Comment</button>
                     </form>
