--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
                     {{ message }}
                 </li>
             {% endfor %}
-            </ul>
+        </ul>
         {% endif %}
     {% block content %}
     <!-- Welcome message with option to register -->
@@ -97,7 +97,6 @@
     </footer>
     <button id="scrollTopButton">Back to top<i class="fa-solid fa-angle-up up-arrow"></i></button>
     <!-- JavaScript -->
-    <script src="{% static 'js/script.js' %}">        
-    </script>
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
