--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -14,9 +14,9 @@
             </a>
         {% endsetvar %}
         <div class="signup-div">
-            <i class="fa-solid fa-golf-ball-tee" id="golfball"></i>
+            <i class="fa-solid fa-golf-ball-tee golfball"></i>
             <span>{% blocktranslate %}If you have not created an account yet, then please {{ link }}<span class="signup-span">sign up</span>{{ end_link }} first.{% endblocktranslate %}</span>
-            <i class="fa-solid fa-golf-ball-tee" id="golfball"></i>
+            <i class="fa-solid fa-golf-ball-tee golfball"></i>
         </div>
         {% url 'account_login' as login_url %}
         {% element form form=form method="post" action=login_url tags="entrance,login" %}
