--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -9,9 +9,9 @@
 {% block content %}
 <!-- Sign In div with golf logos -->
     <div class="signin-div">
-        <i class="fa-solid fa-golf-ball-tee" id="golfball"></i>
+        <i class="fa-solid fa-golf-ball-tee golfball"></i>
         <span>Already have an account? Then please<a id="signin" href="{% url 'account_login' %}">sign in</a></span>
-        <i class="fa-solid fa-golf-ball-tee" id="golfball"></i>
+        <i class="fa-solid fa-golf-ball-tee golfball"></i>
     </div>
     {% setvar link %}
         <a href="{{ login_url }}">
