--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,7 +93,7 @@ h1 {
     border: 5px solid white;
 }
 
-.signup-div {
+.signup-div, .signin-div {
     margin-top: 30px; 
     background-color: aqua;
     border: 5px solid white;
@@ -102,11 +102,6 @@ h1 {
 }
 
 .signin-div {
-    margin-top: 30px; 
-    background-color: aqua;
-    border: 5px solid white;
-    border-style: ridge;
-    margin: 50px;
     box-shadow: 10px 10px;
 }
 
