--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,7 @@
             <div>
                 <h1 class="post-title">{{ post.title }}</h1>
                 <p>{{ post.content }}</p>
-                <p><small>By {{ post.author }} on {{ post.created_on }}</small></p>
+                <p><strong>By {{ post.author }}</strong> on {{ post.created_on }}</small></p>
                 <a href="{% url 'home' %}" class="button-style">Return to home page</a>
             </div>
             <ul>
