Add final docstrings and comments

--- a/blog/templates/blog/create_post.html
+++ b/blog/templates/blog/create_post.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-
+<!-- Create new post form -->
 <h2 class="create-postform-heading">Create new blog post here!</h2>
 <form method="post">
     {% csrf_token %}
