--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-
+<!-- View post list with delete, edit and view functions -->
 <div class="container">
     <div class="row">
         <div class="blog-list">
