--- a/home/templates/home/golf_course_display.html
+++ b/home/templates/home/golf_course_display.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-
+<!-- list of submitted golf courses -->
     <div class="golf-courselist-div">
         <h1>Golf Course List!</h1>
         <ul>
