--- a/home/templates/home/golfcourse_form.html
+++ b/home/templates/home/golfcourse_form.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block content %}
+<!-- Golf course submission form -->
     <h1>{{ view.title }}</h1>
     <form method="post">
         {% csrf_token %}
