--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-
+<!-- Edit post form -->
 <h2>Edit Post</h2>
 <form method="post" action="{% url 'edit_post' post.pk %}" class="editpost-form">
     {% csrf_token %}
